--- a/frontend/src/components/nav/nav.css
+++ b/frontend/src/components/nav/nav.css
@@ -1,4 +1,4 @@
-.sr-only {
+nav h1 {
   border: 0 !important;
   clip: rect(1px, 1px, 1px, 1px) !important;
   /* 1 */
@@ -15,37 +15,37 @@
   /* 3 */
 }
 
-.main-nav {
+nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 5px 20px;
 }
 
-.main-nav a {
+nav a {
   font-weight: bold;
   color: #2c3e50;
 }
 
-.main-nav a.router-link-exact-active {
+nav a.router-link-exact-active {
   color: #42b983;
 }
 
-.main-nav-item {
+nav a:last-child {
   text-decoration: none;
   margin-right: 0.5rem;
 }
 
-.main-nav-item:hover {
+nav a:last-child:hover {
   text-decoration: underline;
 }
 
-.main-nav-logo {
+nav a:first-child {
   display: flex;
   align-items: center;
 }
 
-.main-nav-logo-image {
+nav img {
   max-width: 100%;
   width: 200px;
 }
