--- a/frontend/src/pages/home/home.css
+++ b/frontend/src/pages/home/home.css
@@ -17,13 +17,13 @@
   margin: 0 auto;
 }
 
-.hero-content .subtitle {
+.hero-content p:not(:last-child) {
   font-weight: bold;
   font-size: 1rem;
   margin: 0;
 }
 
-.hero-content .text {
+.hero-content p:last-child {
   margin-bottom: 0;
   font-size: 0.9rem;
 }
@@ -42,11 +42,11 @@
     margin: 2rem;
   }
 
-  .hero-content .subtitle {
+  .hero-content p:not(:last-child) {
     font-size: 1.5rem;
   }
 
-  .hero-content .text {
+  .hero-content p:last-child {
     font-size: 1.2rem;
   }
 }
@@ -56,19 +56,19 @@
   flex-direction: row;
 }
 
-.feature-icon {
+figure img {
   width: 100px;
   border: 10px solid #00bc77;
   border-radius: 50%;
   padding: 1rem;
 }
 
-.feature-item {
+figure {
   flex: 1;
   padding: 2.5rem;
 }
 
-.feature-item-title {
+figure h3{
   color: #222;
   font-size: 1.25rem;
   font-weight: bold;
