--- a/frontend/src/pages/profile/profile.css
+++ b/frontend/src/pages/profile/profile.css
@@ -1,55 +1,4 @@
-.sr-only {
-  border: 0 !important;
-  clip: rect(1px, 1px, 1px, 1px) !important;/* 1 */
-  -webkit-clip-path: inset(50%) !important;
-  clip-path: inset(50%) !important;/* 2 */
-  height: 1px !important;
-  margin: -1px !important;
-  overflow: hidden !important;
-  padding: 0 !important;
-  position: absolute !important;
-  width: 1px !important;
-  white-space: nowrap !important;/* 3 */
-}
-
 @media (min-width: 920px) {
-  .account {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border: 1px solid black;
-    background-color: #fff;
-    width: 80%;
-    margin: 0 auto;
-    flex-direction: column;
-    padding: 1.5rem;
-    box-sizing: border-box;
-    text-align: left;
-    margin-bottom: 2rem;
-  }
-  
-  .account-amount {
-    margin: 0;
-    font-size: 2.5rem;
-    font-weight: bold;
-  }
-  
-  .account-amount-description {
-    margin: 0;
-  }
-  
-  .account-title {
-    margin: 0;
-    padding: 0;
-    font-size: 1rem;
-    font-weight: normal;
-  }
-  
-  .account-content-wrapper {
-    width: 100%;
-    flex: 1;
-  }
-  
   .edit-button {
     border-color: #00bc77;
     background-color: #00bc77;
@@ -62,30 +11,73 @@
     color: #fff;
     margin-bottom: 2rem;
   }
+}
 
-  .transaction-button {
-    display: block;
-    width: 100%;
-    padding: 8px;
-    font-size: 1.1rem;
-    font-weight: bold;
-    margin-top: 1rem;
-    border-color: #00bc77;
-    background-color: #00bc77;
-    color: #fff;
+/* code importé */
+.profil {
+  background-color: #12002B;
+  padding: 20px 35px 35px 35px;
+  color: white;
+}
+
+.profil-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 50px;
+
+  h2 {
+      text-align: center;
+  }
+
+  p {
+      font-size: 25px;
+      margin-bottom: 10px;
+  }
+
+  button {
+      margin-top: 20px;
+      background-color: #00bc77;
+      height: 45px;
+      width: 120px;
+      font-size: 16px;
+      color: #FFF;
+      font-weight: 700;
+      border-bottom: 2px solid #006741;
+      border-right: 2px solid #006741;
+      border-top: 2px solid #00bc77;
+      border-left: 2px solid #00bc77;
+      cursor: pointer;
+  }
+
+  input {
+      margin-top: 10px;
+      height: 45px;
+      width: 300px;
+      font-size: 16px;
+      color: #000;
+      font-weight: 700; 
+  }
+
+  label {
+      margin-top: 10px;
+      font-size: 16px;
+      color: #FFF;
+      font-weight: 700;
+  }
+
+  .profil-buttons {
+      margin-top: 25px;
+      
+      button {
+          margin-right: 15px;
+          margin-left: 15px;
+      }
   }
 }
 
-@media (min-width: 720px) {
-  .account {
-    flex-direction: row;
-  }
-
-  .account-content-wrapper.cta {
-    flex: 0;
-  }
-
-  .transaction-button {
-    width: 200px;
+@media (min-width: 1024px) {
+  .profil {
+      padding: 20px 100px 50px 100px;
   }
 }
