--- a/frontend/src/pages/login/login.css
+++ b/frontend/src/pages/login/login.css
@@ -1,58 +1,69 @@
-.main {
-  flex: 1;
+.sign-in-button {
+  display: block;
+  width: 100%;
+  padding: 8px;
+  font-size: 1.1rem;
+  font-weight: bold;
+  margin-top: 1rem;
+  border-color: #00bc77;
+  background-color: #00bc77;
+  color: #fff;
 }
 
-.bg-dark {
-  background-color: #12002b;
+.sign-in-content {
+  box-sizing: border-box;
+  background-color: white;
+  width: 300px;
+  margin: 0 auto;
+  margin-top: 30px;
+  padding: 30px;
 }
 
-@media (min-width: 920px) {
-  .sign-in-button {
-    display: block;
-    width: 100%;
-    padding: 8px;
-    font-size: 1.1rem;
-    font-weight: bold;
-    margin-top: 1rem;
-    border-color: #00bc77;
-    background-color: #00bc77;
-    color: #fff;
+.sign-in-icon {
+  font-size: 5rem;
+}
+
+.input-remember {
+  display: flex;
+}
+
+.input-remember label {
+  margin-left: 0.25rem;
+}
+
+.input-wrapper {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  margin-bottom: 1rem;
+}
+
+.input-wrapper label {
+  font-weight: bold;
+  margin-bottom: 6px;
+}
+
+.input-wrapper input {
+  padding: 5px;
+  font-size: 1.2rem;
+}
+
+.login i {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .login i {
+    display: inline-block;
   }
 
   .sign-in-content {
-    box-sizing: border-box;
-    background-color: white;
-    width: 300px;
-    margin: 0 auto;
-    margin-top: 3rem;
-    padding: 2rem;
+    width: 400px;
   }
+}
 
-  .sign-in-icon {
-    font-size: 5rem;
-  }
-
-  .input-remember {
-    display: flex;
-  }
-
-  .input-remember label {
-    margin-left: 0.25rem;
-  }
-
-  .input-wrapper {
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-    margin-bottom: 1rem;
-  }
-
-  .input-wrapper label {
-    font-weight: bold;
-  }
-
-  .input-wrapper input {
-    padding: 5px;
-    font-size: 1.2rem;
+@media (min-width: 1024px) {
+  .sign-in-content {
+    width: 500px;
   }
 }
