--- a/frontend/src/pages/profile/profile.css
+++ b/frontend/src/pages/profile/profile.css
@@ -1,83 +1,72 @@
-@media (min-width: 920px) {
-  .edit-button {
-    border-color: #00bc77;
-    background-color: #00bc77;
-    color: #fff;
-    font-weight: bold;
-    padding: 10px;
-  }
-
-  .header {
-    color: #fff;
-    margin-bottom: 2rem;
-  }
+.profile header button {
+  border-color: #00bc77;
+  background-color: #00bc77;
+  color: #fff;
+  font-weight: bold;
+  padding: 10px;
 }
 
-/* code importé */
+header button {
+  margin-bottom: 30px;
+}
+
+.profile form p {
+  color : #fff;
+}
+
 .profil {
   background-color: #12002B;
   padding: 20px 35px 35px 35px;
   color: white;
 }
 
-.profil-header {
+.profile h1 {
+  color: #fff;
+}
+
+.profile form {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-bottom: 50px;
+}
 
-  h2 {
-      text-align: center;
-  }
+.profile form h2 {
+  text-align: center;
+}
 
-  p {
-      font-size: 25px;
-      margin-bottom: 10px;
-  }
+.profile form p {
+  font-size: 25px;
+  margin-bottom: 10px;
+}
 
-  button {
-      margin-top: 20px;
-      background-color: #00bc77;
-      height: 45px;
-      width: 120px;
-      font-size: 16px;
-      color: #FFF;
-      font-weight: 700;
-      border-bottom: 2px solid #006741;
-      border-right: 2px solid #006741;
-      border-top: 2px solid #00bc77;
-      border-left: 2px solid #00bc77;
-      cursor: pointer;
-  }
+.profile input {
+  margin-top: 10px;
+  height: 45px;
+  width: 300px;
+  font-size: 16px;
+  color: #000;
+  font-weight: 700;
+}
 
-  input {
-      margin-top: 10px;
-      height: 45px;
-      width: 300px;
-      font-size: 16px;
-      color: #000;
-      font-weight: 700; 
-  }
+.profile label {
+  margin-top: 10px;
+  font-size: 16px;
+  color: #FFF;
+  font-weight: 700;
+}
 
-  label {
-      margin-top: 10px;
-      font-size: 16px;
-      color: #FFF;
-      font-weight: 700;
-  }
+.profil-buttons {
+  margin-top: 25px;
+}
 
-  .profil-buttons {
-      margin-top: 25px;
-      
-      button {
-          margin-right: 15px;
-          margin-left: 15px;
-      }
-  }
+.profil-buttons button {
+  margin-right: 15px;
+  margin-left: 15px;
 }
 
 @media (min-width: 1024px) {
   .profil {
-      padding: 20px 100px 50px 100px;
+    padding: 20px 100px 50px 100px;
   }
 }
